<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nebula</string>
    <string name="action_settings">Settings</string>
    <string name="intro">Many useful things in a little app</string>
    <string name="camera">camera</string>
    <string name="memo">memo</string>
    <string name="apps">Apps</string>
    <string name="recorder">Recorder</string>
    <string name="calculator">calculator</string>
    <string name="Torch">Torch</string>
    <string name="about">about</string>
    <string name="title_activity_memo">MemoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_recorder">Recorder</string>
    <string name="hello">Welcome to nebula tools</string>
    <string name="app_info">Welcome to the mini-recorder</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="title_activity_about">About</string>
    <string name="about5">Nebula V1.2.1 beta</string>
    <string name="about2">Many stuff in a little app</string>
    <string name="about3">For updates and reports visit XDA thread</string>
    <string name="about6">XDA thread</string>
    <string name="title_activity_torch">Torch</string>
    <string name="title_activity_calc">Calc</string>
    <string name="title_activity_apps">Apps</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="title_activity_caclulator">Caclulator</string>
    <string name="title_activity_timer">Timer</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="abougt">Developer: Mohamed Rashad</string>
    
    <string name="Timer">Timer</string>


</resources>
