<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:android1="http://schemas.android.com/apk/res/android">

    <TextView
        android1:id="@+id/textView1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentTop="true"
        android1:layout_centerHorizontal="true"
        android1:text="@string/hello"
        android1:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android1:id="@+id/scrollView1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/textView1"
        android1:layout_alignRight="@+id/textView1"
        android1:layout_centerVertical="true" >

        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:orientation="vertical" >

            <Button
                android1:id="@+id/camera"
                android1:layout_width="fill_parent"
                android1:layout_height="wrap_content"
                android1:layout_alignParentLeft="true"
                android1:layout_alignParentRight="true"
                android1:text="@string/camera" />

            <Button
                android1:id="@+id/calculator"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content"
                android1:layout_alignParentLeft="true"
                android1:layout_alignParentRight="true"
                android1:text="@string/calculator" />

            <Button
                android1:id="@+id/timer1"
                android1:layout_width="fill_parent"
                android1:layout_height="wrap_content"
                android1:layout_alignParentLeft="true"
                android1:layout_alignParentRight="true"
                android1:text="@string/Timer" />

            <Button
                android1:id="@+id/torch"
                android1:layout_width="fill_parent"
                android1:layout_height="wrap_content"
                android1:layout_alignParentLeft="true"
                android1:layout_alignParentRight="true"
                android1:text="@string/Torch" />

            <Button
                android1:id="@+id/button1"
                 android1:layout_width="fill_parent"
                android1:layout_height="wrap_content"
                android1:layout_alignParentLeft="true"
                android1:layout_alignParentRight="true"
                android1:text="Button" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>